--- a/src/main/res/layout/rv_head.xml
+++ b/src/main/res/layout/rv_head.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="6dp">
-        <TextView
+        <com.xw.repo.VectorCompatTextView
+            app:drawableLeftCompat="@drawable/ic_sort"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -32,7 +33,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
+        <com.xw.repo.VectorCompatTextView
+            app:drawableLeftCompat="@drawable/ic_paixu_"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
